--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
 	"private": true,
-	"repository": "github:Crossbell-Box/crossbell.io",
-	"bugs": "https://github.com/Crossbell-Box/crossbell.io/issues",
-	"homepage": "https://github.com/Crossbell-Box/crossbell.io#readme",
+	"repository": "github:Crossbell-Box/zinde.xyz",
+	"bugs": "https://github.com/Crossbell-Box/zinde.xyz/issues",
+	"homepage": "https://github.com/Crossbell-Box/zinde.xyz#readme",
 	"author": "Natural Selection Labs",
 	"scripts": {
-		"build": "pnpm --filter crossbell.io run build",
+		"build": "pnpm --filter zinde.xyz run build",
 		"bump-version": "bumpp package.json packages/*/package.json sites/*/package.json",
 		"clean": "turbo run clean",
-		"dev": "pnpm --filter crossbell.io run dev",
+		"dev": "pnpm --filter zinde.xyz run dev",
 		"format": "run-p format:code format:package",
 		"format:code": "prettier '@(packages|examples)/**/*.@(ts|tsx|html|json)' --write",
 		"format:package": "format-package 'package.json' -w -c format-package.json",
 		"lint": "eslint . --ext .ts,.tsx --fix --max-warnings 0",
 		"prepare": "husky install",
-		"start": "pnpm --filter crossbell.io run start"
+		"start": "pnpm --filter zinde.xyz run start"
 	},
 	"dependencies": {
 		"@crossbell/connect-kit": "0.0.80",
