--- a/deploy/dev/svc.yaml
+++ b/deploy/dev/svc.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: crossbell-io
+  name: zinde-xyz
   namespace: crossbell
 spec:
   type: ClusterIP
   selector:
-    app: crossbell-io
+    app: zinde-xyz
     tier: api
   ports:
     - name: http
