--- a/deploy/dev/svc.yaml
+++ b/deploy/dev/svc.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: zinde-xyz
-  namespace: crossbell
+  namespace: zinde
 spec:
   type: ClusterIP
   selector:
